--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,7 +19,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "supabase": "^2.54.11",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5"
   }
 }
